Updated package.json - tape is a dev dependency
The tape package was listed as a dependency when it should have been
listed as a development dependency. I have changed this in the
package.json file.

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "node": ">= 0.10"
   },
   "name": "encode-quoted-printable",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Encode a string to a quoted printable format for emails",
   "main": "lib/encode-quoted-printable.js",
   "scripts": {
@@ -20,7 +20,7 @@
   ],
   "author": "connrs",
   "license": "http://www.apache.org/licenses/LICENSE-2.0.txt",
-  "dependencies": {
+  "devDependencies": {
     "tape": "~1.0.4"
   }
 }
